# travispoulsen.com

./: .gitignore  README.org  index.html
gen-site/: LICENSE  cabal.sandbox.config  cards.yaml  gen-site.cabal
gen-site/src/: Card.hs  Main.hs  Template.hs  Types.hs
static/css/: main.css
