name:                gen-site
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tpoulsen/gen-site#readme
license:             BSD3
license-file:        LICENSE
author:              Travis Poulsen
maintainer:          travis.poulsen@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

executable gen-site
  main-is:             Main.hs
  other-modules:       Template
                     , Card
                     , Types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , interpolatedstring-perl6
                     , system-filepath
                     , text
                     , turtle < 1.4
                     , yaml
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite gen-site-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  build-depends:       base
                     , interpolatedstring-perl6
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tpoulsen/gen-site
